--- a/Machines and Mechanisms/README
+++ b/Machines and Mechanisms/README
@@ -1,1 +1,9 @@
+The Machines and Mechanisms Lab investigates gear ratios, speed reduction, and change of direction designs.
+An 18:1 worm gear assembly was designed and built. A window was cut into the side plates to allow better
+visualization of the gears. Students were then able to look at speed reduction.
 
+
+Future plans:
+Torque multiplcation was attempted to be measured, however this is not the designed funciton of a worm gear
+assembly. Another type of gear design will be invesitaged and planned to be added to the next occurance of
+the lab. We plan to upload files here when a design is tested.
